tascal_compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID PV bloco PF
Rule 2     bloco -> secao_decl_var comando_composto
Rule 3     bloco -> comando_composto
Rule 4     secao_decl_var -> VAR declaracao_var PV lista_decl_var
Rule 5     secao_decl_var -> VAR declaracao_var PV
Rule 6     lista_decl_var -> declaracao_var PV lista_decl_var
Rule 7     lista_decl_var -> declaracao_var PV
Rule 8     declaracao_var -> lista_id DP tipo
Rule 9     lista_id -> ID
Rule 10    lista_id -> ID VIRG lista_id
Rule 11    tipo -> INTEGER
Rule 12    tipo -> BOOLEAN
Rule 13    comando_composto -> BEGIN lista_comandos END
Rule 14    lista_comandos -> comando
Rule 15    lista_comandos -> comando PV lista_comandos
Rule 16    lista_comandos -> comando PV
Rule 17    comando -> atribuicao
Rule 18    comando -> condicional
Rule 19    comando -> repeticao
Rule 20    comando -> leitura
Rule 21    comando -> escrita
Rule 22    comando -> comando_composto
Rule 23    atribuicao -> ID DPIGUAL expressao
Rule 24    condicional -> IF expressao THEN comando
Rule 25    condicional -> IF expressao THEN comando ELSE comando
Rule 26    repeticao -> WHILE expressao DO comando
Rule 27    leitura -> READ EPAR lista_id DPAR
Rule 28    escrita -> WRITE EPAR lista_exp DPAR
Rule 29    lista_exp -> expressao
Rule 30    lista_exp -> expressao VIRG lista_exp
Rule 31    expressao -> expressao_simples
Rule 32    expressao -> expressao_simples relacao expressao_simples
Rule 33    relacao -> IGUAL
Rule 34    relacao -> DIFERENTE
Rule 35    relacao -> MENORQUE
Rule 36    relacao -> MENORIGUAL
Rule 37    relacao -> MAIORQUE
Rule 38    relacao -> MAIORIGUAL
Rule 39    expressao_simples -> termo
Rule 40    expressao_simples -> expressao_simples MAIS termo
Rule 41    expressao_simples -> expressao_simples MENOS termo
Rule 42    expressao_simples -> expressao_simples OR termo
Rule 43    termo -> fator
Rule 44    termo -> termo VEZES fator
Rule 45    termo -> termo DIV fator
Rule 46    termo -> termo AND fator
Rule 47    fator -> ID
Rule 48    fator -> NUMERO
Rule 49    fator -> TRUE
Rule 50    fator -> FALSE
Rule 51    fator -> EPAR expressao DPAR
Rule 52    fator -> NOT fator
Rule 53    fator -> MENOS fator
Rule 54    secao_decl_var -> VAR error
Rule 55    lista_comandos -> lista_comandos error PV
Rule 56    atribuicao -> ID DPIGUAL error
Rule 57    fator -> EPAR error DPAR

Terminals, with rules where they appear

AND                  : 46
BEGIN                : 13
BOOLEAN              : 12
DIFERENTE            : 34
DIV                  : 45
DO                   : 26
DP                   : 8
DPAR                 : 27 28 51 57
DPIGUAL              : 23 56
ELSE                 : 25
END                  : 13
EPAR                 : 27 28 51 57
FALSE                : 50
ID                   : 1 9 10 23 47 56
IF                   : 24 25
IGUAL                : 33
INTEGER              : 11
MAIORIGUAL           : 38
MAIORQUE             : 37
MAIS                 : 40
MENORIGUAL           : 36
MENORQUE             : 35
MENOS                : 41 53
NOT                  : 52
NUMERO               : 48
OR                   : 42
PF                   : 1
PROGRAM              : 1
PV                   : 1 4 5 6 7 15 16 55
READ                 : 27
THEN                 : 24 25
TRUE                 : 49
VAR                  : 4 5 54
VEZES                : 44
VIRG                 : 10 30
WHILE                : 26
WRITE                : 28
error                : 54 55 56 57

Nonterminals, with rules where they appear

atribuicao           : 17
bloco                : 1
comando              : 14 15 16 24 25 25 26
comando_composto     : 2 3 22
condicional          : 18
declaracao_var       : 4 5 6 7
escrita              : 21
expressao            : 23 24 25 26 29 30 51
expressao_simples    : 31 32 32 40 41 42
fator                : 43 44 45 46 52 53
leitura              : 20
lista_comandos       : 13 15 55
lista_decl_var       : 4 6
lista_exp            : 28 30
lista_id             : 8 10 27
programa             : 0
relacao              : 32
repeticao            : 19
secao_decl_var       : 2
termo                : 39 40 41 42 44 45 46
tipo                 : 8

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID PV bloco PF

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID PV bloco PF

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . PV bloco PF

    PV              shift and go to state 4


state 4

    (1) programa -> PROGRAM ID PV . bloco PF
    (2) bloco -> . secao_decl_var comando_composto
    (3) bloco -> . comando_composto
    (4) secao_decl_var -> . VAR declaracao_var PV lista_decl_var
    (5) secao_decl_var -> . VAR declaracao_var PV
    (54) secao_decl_var -> . VAR error
    (13) comando_composto -> . BEGIN lista_comandos END

    VAR             shift and go to state 8
    BEGIN           shift and go to state 9

    bloco                          shift and go to state 5
    secao_decl_var                 shift and go to state 6
    comando_composto               shift and go to state 7

state 5

    (1) programa -> PROGRAM ID PV bloco . PF

    PF              shift and go to state 10


state 6

    (2) bloco -> secao_decl_var . comando_composto
    (13) comando_composto -> . BEGIN lista_comandos END

    BEGIN           shift and go to state 9

    comando_composto               shift and go to state 11

state 7

    (3) bloco -> comando_composto .

    PF              reduce using rule 3 (bloco -> comando_composto .)


state 8

    (4) secao_decl_var -> VAR . declaracao_var PV lista_decl_var
    (5) secao_decl_var -> VAR . declaracao_var PV
    (54) secao_decl_var -> VAR . error
    (8) declaracao_var -> . lista_id DP tipo
    (9) lista_id -> . ID
    (10) lista_id -> . ID VIRG lista_id

    error           shift and go to state 13
    ID              shift and go to state 15

    declaracao_var                 shift and go to state 12
    lista_id                       shift and go to state 14

state 9

    (13) comando_composto -> BEGIN . lista_comandos END
    (14) lista_comandos -> . comando
    (15) lista_comandos -> . comando PV lista_comandos
    (16) lista_comandos -> . comando PV
    (55) lista_comandos -> . lista_comandos error PV
    (17) comando -> . atribuicao
    (18) comando -> . condicional
    (19) comando -> . repeticao
    (20) comando -> . leitura
    (21) comando -> . escrita
    (22) comando -> . comando_composto
    (23) atribuicao -> . ID DPIGUAL expressao
    (56) atribuicao -> . ID DPIGUAL error
    (24) condicional -> . IF expressao THEN comando
    (25) condicional -> . IF expressao THEN comando ELSE comando
    (26) repeticao -> . WHILE expressao DO comando
    (27) leitura -> . READ EPAR lista_id DPAR
    (28) escrita -> . WRITE EPAR lista_exp DPAR
    (13) comando_composto -> . BEGIN lista_comandos END

    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 28
    BEGIN           shift and go to state 9

    lista_comandos                 shift and go to state 16
    comando                        shift and go to state 17
    atribuicao                     shift and go to state 18
    condicional                    shift and go to state 19
    repeticao                      shift and go to state 20
    leitura                        shift and go to state 21
    escrita                        shift and go to state 22
    comando_composto               shift and go to state 23

state 10

    (1) programa -> PROGRAM ID PV bloco PF .

    $end            reduce using rule 1 (programa -> PROGRAM ID PV bloco PF .)


state 11

    (2) bloco -> secao_decl_var comando_composto .

    PF              reduce using rule 2 (bloco -> secao_decl_var comando_composto .)


state 12

    (4) secao_decl_var -> VAR declaracao_var . PV lista_decl_var
    (5) secao_decl_var -> VAR declaracao_var . PV

    PV              shift and go to state 29


state 13

    (54) secao_decl_var -> VAR error .

    BEGIN           reduce using rule 54 (secao_decl_var -> VAR error .)


state 14

    (8) declaracao_var -> lista_id . DP tipo

    DP              shift and go to state 30


state 15

    (9) lista_id -> ID .
    (10) lista_id -> ID . VIRG lista_id

    DP              reduce using rule 9 (lista_id -> ID .)
    DPAR            reduce using rule 9 (lista_id -> ID .)
    VIRG            shift and go to state 31


state 16

    (13) comando_composto -> BEGIN lista_comandos . END
    (55) lista_comandos -> lista_comandos . error PV

    END             shift and go to state 32
    error           shift and go to state 33


state 17

    (14) lista_comandos -> comando .
    (15) lista_comandos -> comando . PV lista_comandos
    (16) lista_comandos -> comando . PV

    END             reduce using rule 14 (lista_comandos -> comando .)
    error           reduce using rule 14 (lista_comandos -> comando .)
    PV              shift and go to state 34


state 18

    (17) comando -> atribuicao .

    PV              reduce using rule 17 (comando -> atribuicao .)
    END             reduce using rule 17 (comando -> atribuicao .)
    error           reduce using rule 17 (comando -> atribuicao .)
    ELSE            reduce using rule 17 (comando -> atribuicao .)


state 19

    (18) comando -> condicional .

    PV              reduce using rule 18 (comando -> condicional .)
    END             reduce using rule 18 (comando -> condicional .)
    error           reduce using rule 18 (comando -> condicional .)
    ELSE            reduce using rule 18 (comando -> condicional .)


state 20

    (19) comando -> repeticao .

    PV              reduce using rule 19 (comando -> repeticao .)
    END             reduce using rule 19 (comando -> repeticao .)
    error           reduce using rule 19 (comando -> repeticao .)
    ELSE            reduce using rule 19 (comando -> repeticao .)


state 21

    (20) comando -> leitura .

    PV              reduce using rule 20 (comando -> leitura .)
    END             reduce using rule 20 (comando -> leitura .)
    error           reduce using rule 20 (comando -> leitura .)
    ELSE            reduce using rule 20 (comando -> leitura .)


state 22

    (21) comando -> escrita .

    PV              reduce using rule 21 (comando -> escrita .)
    END             reduce using rule 21 (comando -> escrita .)
    error           reduce using rule 21 (comando -> escrita .)
    ELSE            reduce using rule 21 (comando -> escrita .)


state 23

    (22) comando -> comando_composto .

    PV              reduce using rule 22 (comando -> comando_composto .)
    END             reduce using rule 22 (comando -> comando_composto .)
    error           reduce using rule 22 (comando -> comando_composto .)
    ELSE            reduce using rule 22 (comando -> comando_composto .)


state 24

    (23) atribuicao -> ID . DPIGUAL expressao
    (56) atribuicao -> ID . DPIGUAL error

    DPIGUAL         shift and go to state 35


state 25

    (24) condicional -> IF . expressao THEN comando
    (25) condicional -> IF . expressao THEN comando ELSE comando
    (31) expressao -> . expressao_simples
    (32) expressao -> . expressao_simples relacao expressao_simples
    (39) expressao_simples -> . termo
    (40) expressao_simples -> . expressao_simples MAIS termo
    (41) expressao_simples -> . expressao_simples MENOS termo
    (42) expressao_simples -> . expressao_simples OR termo
    (43) termo -> . fator
    (44) termo -> . termo VEZES fator
    (45) termo -> . termo DIV fator
    (46) termo -> . termo AND fator
    (47) fator -> . ID
    (48) fator -> . NUMERO
    (49) fator -> . TRUE
    (50) fator -> . FALSE
    (51) fator -> . EPAR expressao DPAR
    (52) fator -> . NOT fator
    (53) fator -> . MENOS fator
    (57) fator -> . EPAR error DPAR

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 36
    expressao_simples              shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 26

    (26) repeticao -> WHILE . expressao DO comando
    (31) expressao -> . expressao_simples
    (32) expressao -> . expressao_simples relacao expressao_simples
    (39) expressao_simples -> . termo
    (40) expressao_simples -> . expressao_simples MAIS termo
    (41) expressao_simples -> . expressao_simples MENOS termo
    (42) expressao_simples -> . expressao_simples OR termo
    (43) termo -> . fator
    (44) termo -> . termo VEZES fator
    (45) termo -> . termo DIV fator
    (46) termo -> . termo AND fator
    (47) fator -> . ID
    (48) fator -> . NUMERO
    (49) fator -> . TRUE
    (50) fator -> . FALSE
    (51) fator -> . EPAR expressao DPAR
    (52) fator -> . NOT fator
    (53) fator -> . MENOS fator
    (57) fator -> . EPAR error DPAR

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 47
    expressao_simples              shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 27

    (27) leitura -> READ . EPAR lista_id DPAR

    EPAR            shift and go to state 48


state 28

    (28) escrita -> WRITE . EPAR lista_exp DPAR

    EPAR            shift and go to state 49


state 29

    (4) secao_decl_var -> VAR declaracao_var PV . lista_decl_var
    (5) secao_decl_var -> VAR declaracao_var PV .
    (6) lista_decl_var -> . declaracao_var PV lista_decl_var
    (7) lista_decl_var -> . declaracao_var PV
    (8) declaracao_var -> . lista_id DP tipo
    (9) lista_id -> . ID
    (10) lista_id -> . ID VIRG lista_id

    BEGIN           reduce using rule 5 (secao_decl_var -> VAR declaracao_var PV .)
    ID              shift and go to state 15

    declaracao_var                 shift and go to state 50
    lista_decl_var                 shift and go to state 51
    lista_id                       shift and go to state 14

state 30

    (8) declaracao_var -> lista_id DP . tipo
    (11) tipo -> . INTEGER
    (12) tipo -> . BOOLEAN

    INTEGER         shift and go to state 53
    BOOLEAN         shift and go to state 54

    tipo                           shift and go to state 52

state 31

    (10) lista_id -> ID VIRG . lista_id
    (9) lista_id -> . ID
    (10) lista_id -> . ID VIRG lista_id

    ID              shift and go to state 15

    lista_id                       shift and go to state 55

state 32

    (13) comando_composto -> BEGIN lista_comandos END .

    PF              reduce using rule 13 (comando_composto -> BEGIN lista_comandos END .)
    PV              reduce using rule 13 (comando_composto -> BEGIN lista_comandos END .)
    END             reduce using rule 13 (comando_composto -> BEGIN lista_comandos END .)
    error           reduce using rule 13 (comando_composto -> BEGIN lista_comandos END .)
    ELSE            reduce using rule 13 (comando_composto -> BEGIN lista_comandos END .)


state 33

    (55) lista_comandos -> lista_comandos error . PV

    PV              shift and go to state 56


state 34

    (15) lista_comandos -> comando PV . lista_comandos
    (16) lista_comandos -> comando PV .
    (14) lista_comandos -> . comando
    (15) lista_comandos -> . comando PV lista_comandos
    (16) lista_comandos -> . comando PV
    (55) lista_comandos -> . lista_comandos error PV
    (17) comando -> . atribuicao
    (18) comando -> . condicional
    (19) comando -> . repeticao
    (20) comando -> . leitura
    (21) comando -> . escrita
    (22) comando -> . comando_composto
    (23) atribuicao -> . ID DPIGUAL expressao
    (56) atribuicao -> . ID DPIGUAL error
    (24) condicional -> . IF expressao THEN comando
    (25) condicional -> . IF expressao THEN comando ELSE comando
    (26) repeticao -> . WHILE expressao DO comando
    (27) leitura -> . READ EPAR lista_id DPAR
    (28) escrita -> . WRITE EPAR lista_exp DPAR
    (13) comando_composto -> . BEGIN lista_comandos END

    END             reduce using rule 16 (lista_comandos -> comando PV .)
    error           reduce using rule 16 (lista_comandos -> comando PV .)
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    READ            shift and go to state 27
    WRITE           shift and go to state 28
    BEGIN           shift and go to state 9

    comando                        shift and go to state 17
    lista_comandos                 shift and go to state 57
    atribuicao                     shift and go to state 18
    condicional                    shift and go to state 19
    repeticao                      shift and go to state 20
    leitura                        shift and go to state 21
    escrita                        shift and go to state 22
    comando_composto               shift and go to state 23

state 35

    (23) atribuicao -> ID DPIGUAL . expressao
    (56) atribuicao -> ID DPIGUAL . error
    (31) expressao -> . expressao_simples
    (32) expressao -> . expressao_simples relacao expressao_simples
    (39) expressao_simples -> . termo
    (40) expressao_simples -> . expressao_simples MAIS termo
    (41) expressao_simples -> . expressao_simples MENOS termo
    (42) expressao_simples -> . expressao_simples OR termo
    (43) termo -> . fator
    (44) termo -> . termo VEZES fator
    (45) termo -> . termo DIV fator
    (46) termo -> . termo AND fator
    (47) fator -> . ID
    (48) fator -> . NUMERO
    (49) fator -> . TRUE
    (50) fator -> . FALSE
    (51) fator -> . EPAR expressao DPAR
    (52) fator -> . NOT fator
    (53) fator -> . MENOS fator
    (57) fator -> . EPAR error DPAR

    error           shift and go to state 59
    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 58
    expressao_simples              shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 36

    (24) condicional -> IF expressao . THEN comando
    (25) condicional -> IF expressao . THEN comando ELSE comando

    THEN            shift and go to state 60


state 37

    (31) expressao -> expressao_simples .
    (32) expressao -> expressao_simples . relacao expressao_simples
    (40) expressao_simples -> expressao_simples . MAIS termo
    (41) expressao_simples -> expressao_simples . MENOS termo
    (42) expressao_simples -> expressao_simples . OR termo
    (33) relacao -> . IGUAL
    (34) relacao -> . DIFERENTE
    (35) relacao -> . MENORQUE
    (36) relacao -> . MENORIGUAL
    (37) relacao -> . MAIORQUE
    (38) relacao -> . MAIORIGUAL

    THEN            reduce using rule 31 (expressao -> expressao_simples .)
    DO              reduce using rule 31 (expressao -> expressao_simples .)
    PV              reduce using rule 31 (expressao -> expressao_simples .)
    END             reduce using rule 31 (expressao -> expressao_simples .)
    error           reduce using rule 31 (expressao -> expressao_simples .)
    ELSE            reduce using rule 31 (expressao -> expressao_simples .)
    DPAR            reduce using rule 31 (expressao -> expressao_simples .)
    VIRG            reduce using rule 31 (expressao -> expressao_simples .)
    MAIS            shift and go to state 62
    MENOS           shift and go to state 63
    OR              shift and go to state 64
    IGUAL           shift and go to state 65
    DIFERENTE       shift and go to state 66
    MENORQUE        shift and go to state 67
    MENORIGUAL      shift and go to state 68
    MAIORQUE        shift and go to state 69
    MAIORIGUAL      shift and go to state 70

    relacao                        shift and go to state 61

state 38

    (39) expressao_simples -> termo .
    (44) termo -> termo . VEZES fator
    (45) termo -> termo . DIV fator
    (46) termo -> termo . AND fator

    MAIS            reduce using rule 39 (expressao_simples -> termo .)
    MENOS           reduce using rule 39 (expressao_simples -> termo .)
    OR              reduce using rule 39 (expressao_simples -> termo .)
    IGUAL           reduce using rule 39 (expressao_simples -> termo .)
    DIFERENTE       reduce using rule 39 (expressao_simples -> termo .)
    MENORQUE        reduce using rule 39 (expressao_simples -> termo .)
    MENORIGUAL      reduce using rule 39 (expressao_simples -> termo .)
    MAIORQUE        reduce using rule 39 (expressao_simples -> termo .)
    MAIORIGUAL      reduce using rule 39 (expressao_simples -> termo .)
    THEN            reduce using rule 39 (expressao_simples -> termo .)
    DO              reduce using rule 39 (expressao_simples -> termo .)
    PV              reduce using rule 39 (expressao_simples -> termo .)
    END             reduce using rule 39 (expressao_simples -> termo .)
    error           reduce using rule 39 (expressao_simples -> termo .)
    ELSE            reduce using rule 39 (expressao_simples -> termo .)
    DPAR            reduce using rule 39 (expressao_simples -> termo .)
    VIRG            reduce using rule 39 (expressao_simples -> termo .)
    VEZES           shift and go to state 71
    DIV             shift and go to state 72
    AND             shift and go to state 73


state 39

    (53) fator -> MENOS . fator
    (47) fator -> . ID
    (48) fator -> . NUMERO
    (49) fator -> . TRUE
    (50) fator -> . FALSE
    (51) fator -> . EPAR expressao DPAR
    (52) fator -> . NOT fator
    (53) fator -> . MENOS fator
    (57) fator -> . EPAR error DPAR

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    fator                          shift and go to state 74

state 40

    (43) termo -> fator .

    VEZES           reduce using rule 43 (termo -> fator .)
    DIV             reduce using rule 43 (termo -> fator .)
    AND             reduce using rule 43 (termo -> fator .)
    MAIS            reduce using rule 43 (termo -> fator .)
    MENOS           reduce using rule 43 (termo -> fator .)
    OR              reduce using rule 43 (termo -> fator .)
    IGUAL           reduce using rule 43 (termo -> fator .)
    DIFERENTE       reduce using rule 43 (termo -> fator .)
    MENORQUE        reduce using rule 43 (termo -> fator .)
    MENORIGUAL      reduce using rule 43 (termo -> fator .)
    MAIORQUE        reduce using rule 43 (termo -> fator .)
    MAIORIGUAL      reduce using rule 43 (termo -> fator .)
    THEN            reduce using rule 43 (termo -> fator .)
    DO              reduce using rule 43 (termo -> fator .)
    PV              reduce using rule 43 (termo -> fator .)
    END             reduce using rule 43 (termo -> fator .)
    error           reduce using rule 43 (termo -> fator .)
    ELSE            reduce using rule 43 (termo -> fator .)
    DPAR            reduce using rule 43 (termo -> fator .)
    VIRG            reduce using rule 43 (termo -> fator .)


state 41

    (47) fator -> ID .

    VEZES           reduce using rule 47 (fator -> ID .)
    DIV             reduce using rule 47 (fator -> ID .)
    AND             reduce using rule 47 (fator -> ID .)
    MAIS            reduce using rule 47 (fator -> ID .)
    MENOS           reduce using rule 47 (fator -> ID .)
    OR              reduce using rule 47 (fator -> ID .)
    IGUAL           reduce using rule 47 (fator -> ID .)
    DIFERENTE       reduce using rule 47 (fator -> ID .)
    MENORQUE        reduce using rule 47 (fator -> ID .)
    MENORIGUAL      reduce using rule 47 (fator -> ID .)
    MAIORQUE        reduce using rule 47 (fator -> ID .)
    MAIORIGUAL      reduce using rule 47 (fator -> ID .)
    THEN            reduce using rule 47 (fator -> ID .)
    DO              reduce using rule 47 (fator -> ID .)
    PV              reduce using rule 47 (fator -> ID .)
    END             reduce using rule 47 (fator -> ID .)
    error           reduce using rule 47 (fator -> ID .)
    ELSE            reduce using rule 47 (fator -> ID .)
    DPAR            reduce using rule 47 (fator -> ID .)
    VIRG            reduce using rule 47 (fator -> ID .)


state 42

    (48) fator -> NUMERO .

    VEZES           reduce using rule 48 (fator -> NUMERO .)
    DIV             reduce using rule 48 (fator -> NUMERO .)
    AND             reduce using rule 48 (fator -> NUMERO .)
    MAIS            reduce using rule 48 (fator -> NUMERO .)
    MENOS           reduce using rule 48 (fator -> NUMERO .)
    OR              reduce using rule 48 (fator -> NUMERO .)
    IGUAL           reduce using rule 48 (fator -> NUMERO .)
    DIFERENTE       reduce using rule 48 (fator -> NUMERO .)
    MENORQUE        reduce using rule 48 (fator -> NUMERO .)
    MENORIGUAL      reduce using rule 48 (fator -> NUMERO .)
    MAIORQUE        reduce using rule 48 (fator -> NUMERO .)
    MAIORIGUAL      reduce using rule 48 (fator -> NUMERO .)
    THEN            reduce using rule 48 (fator -> NUMERO .)
    DO              reduce using rule 48 (fator -> NUMERO .)
    PV              reduce using rule 48 (fator -> NUMERO .)
    END             reduce using rule 48 (fator -> NUMERO .)
    error           reduce using rule 48 (fator -> NUMERO .)
    ELSE            reduce using rule 48 (fator -> NUMERO .)
    DPAR            reduce using rule 48 (fator -> NUMERO .)
    VIRG            reduce using rule 48 (fator -> NUMERO .)


state 43

    (49) fator -> TRUE .

    VEZES           reduce using rule 49 (fator -> TRUE .)
    DIV             reduce using rule 49 (fator -> TRUE .)
    AND             reduce using rule 49 (fator -> TRUE .)
    MAIS            reduce using rule 49 (fator -> TRUE .)
    MENOS           reduce using rule 49 (fator -> TRUE .)
    OR              reduce using rule 49 (fator -> TRUE .)
    IGUAL           reduce using rule 49 (fator -> TRUE .)
    DIFERENTE       reduce using rule 49 (fator -> TRUE .)
    MENORQUE        reduce using rule 49 (fator -> TRUE .)
    MENORIGUAL      reduce using rule 49 (fator -> TRUE .)
    MAIORQUE        reduce using rule 49 (fator -> TRUE .)
    MAIORIGUAL      reduce using rule 49 (fator -> TRUE .)
    THEN            reduce using rule 49 (fator -> TRUE .)
    DO              reduce using rule 49 (fator -> TRUE .)
    PV              reduce using rule 49 (fator -> TRUE .)
    END             reduce using rule 49 (fator -> TRUE .)
    error           reduce using rule 49 (fator -> TRUE .)
    ELSE            reduce using rule 49 (fator -> TRUE .)
    DPAR            reduce using rule 49 (fator -> TRUE .)
    VIRG            reduce using rule 49 (fator -> TRUE .)


state 44

    (50) fator -> FALSE .

    VEZES           reduce using rule 50 (fator -> FALSE .)
    DIV             reduce using rule 50 (fator -> FALSE .)
    AND             reduce using rule 50 (fator -> FALSE .)
    MAIS            reduce using rule 50 (fator -> FALSE .)
    MENOS           reduce using rule 50 (fator -> FALSE .)
    OR              reduce using rule 50 (fator -> FALSE .)
    IGUAL           reduce using rule 50 (fator -> FALSE .)
    DIFERENTE       reduce using rule 50 (fator -> FALSE .)
    MENORQUE        reduce using rule 50 (fator -> FALSE .)
    MENORIGUAL      reduce using rule 50 (fator -> FALSE .)
    MAIORQUE        reduce using rule 50 (fator -> FALSE .)
    MAIORIGUAL      reduce using rule 50 (fator -> FALSE .)
    THEN            reduce using rule 50 (fator -> FALSE .)
    DO              reduce using rule 50 (fator -> FALSE .)
    PV              reduce using rule 50 (fator -> FALSE .)
    END             reduce using rule 50 (fator -> FALSE .)
    error           reduce using rule 50 (fator -> FALSE .)
    ELSE            reduce using rule 50 (fator -> FALSE .)
    DPAR            reduce using rule 50 (fator -> FALSE .)
    VIRG            reduce using rule 50 (fator -> FALSE .)


state 45

    (51) fator -> EPAR . expressao DPAR
    (57) fator -> EPAR . error DPAR
    (31) expressao -> . expressao_simples
    (32) expressao -> . expressao_simples relacao expressao_simples
    (39) expressao_simples -> . termo
    (40) expressao_simples -> . expressao_simples MAIS termo
    (41) expressao_simples -> . expressao_simples MENOS termo
    (42) expressao_simples -> . expressao_simples OR termo
    (43) termo -> . fator
    (44) termo -> . termo VEZES fator
    (45) termo -> . termo DIV fator
    (46) termo -> . termo AND fator
    (47) fator -> . ID
    (48) fator -> . NUMERO
    (49) fator -> . TRUE
    (50) fator -> . FALSE
    (51) fator -> . EPAR expressao DPAR
    (52) fator -> . NOT fator
    (53) fator -> . MENOS fator
    (57) fator -> . EPAR error DPAR

    error           shift and go to state 76
    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    expressao                      shift and go to state 75
    expressao_simples              shift and go to state 37
    termo                          shift and go to state 38
    fator                          shift and go to state 40

state 46

    (52) fator -> NOT . fator
    (47) fator -> . ID
    (48) fator -> . NUMERO
    (49) fator -> . TRUE
    (50) fator -> . FALSE
    (51) fator -> . EPAR expressao DPAR
    (52) fator -> . NOT fator
    (53) fator -> . MENOS fator
    (57) fator -> . EPAR error DPAR

    ID              shift and go to state 41
    NUMERO          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    EPAR            shift and go to state 45
    NOT             shift and go to state 46
    MENOS           shift and go to state 39

    fator                          shift and go to state 77

state 47

    (26) repeticao -> WHILE expressao . DO comando

    DO              shift and go to state 78


state 48

    (27) leitura -> READ EPAR . lista_id DPAR
    (9) lista_id -> . ID
    (10) lista_id -> . ID VIRG lista_id

    ID              shift and go to state 15

    lista_id                       shift and go to state 79

state 49
